# crc16-acorn

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
